# pjecz-citas-v2-cliente-api-oauth2

./: .gcloudignore  .gitignore  README.md  app.yaml  arrancar.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  gcloud-app-deploy.yml
citas_cliente/: app.py
citas_cliente/core/autoridades/: models.py
citas_cliente/core/cit_categorias/: models.py
citas_cliente/core/cit_citas/: models.py
citas_cliente/core/cit_clientes/: models.py
citas_cliente/core/cit_clientes_recuperaciones/: models.py
citas_cliente/core/cit_clientes_registros/: models.py
citas_cliente/core/cit_dias_inhabiles/: models.py
citas_cliente/core/cit_horas_bloqueadas/: models.py
citas_cliente/core/cit_oficinas_servicios/: models.py
citas_cliente/core/cit_servicios/: models.py
citas_cliente/core/distritos/: models.py
citas_cliente/core/domicilios/: models.py
citas_cliente/core/enc_servicios/: models.py
citas_cliente/core/enc_sistemas/: models.py
citas_cliente/core/materias/: models.py
citas_cliente/core/municipios/: models.py
citas_cliente/core/oficinas/: models.py
citas_cliente/core/pag_pagos/: models.py
citas_cliente/core/pag_tramites_servicios/: models.py
citas_cliente/core/ppa_solicitudes/: models.py
citas_cliente/core/tdt_partidos/: models.py
citas_cliente/core/tdt_solicitudes/: models.py
citas_cliente/v1/autoridades/: crud.py  models.py  paths.py
citas_cliente/v1/cit_clientes/: authentications.py  crud.py  models.py  paths.py  schemas.py
citas_cliente/v1/cit_clientes_recuperaciones/: crud.py  models.py  paths.py  schemas.py
citas_cliente/v1/cit_clientes_registros/: crud.py  models.py  paths.py  schemas.py
citas_cliente/v1/distritos/: crud.py  paths.py  schemas.py
citas_cliente/v1/materias/: crud.py  models.py  paths.py
citas_cliente/v1/permisos/: models.py
citas_cliente/v2/autoridades/: crud.py  models.py  paths.py  schemas.py
citas_cliente/v2/cit_categorias/: crud.py  models.py
citas_cliente/v2/cit_citas/: crud.py  models.py  paths.py  schemas.py
citas_cliente/v2/cit_citas_anonimas/: crud.py
citas_cliente/v2/cit_citas_horas_disponibles/: crud.py
citas_cliente/v2/cit_clientes/: authentications.py  crud.py  models.py  paths.py  schemas.py
citas_cliente/v2/cit_clientes_recuperaciones/: crud.py  models.py  paths.py  schemas.py
config/: settings.py
lib/: AESEncryption.py  database.py  exceptions.py  fastapi_pagination.py  pagos_banco.py  pwgen.py  redis.py  safe_string.py  santander_web_pay_plus.py  universal_mixin.py
pjecz-citas-cliente-api-oauth2/: main.py  settings.py
pjecz-citas-cliente-api-oauth2/dependencies/: AESEncryption.py  database.py  exceptions.py  fastapi_pagination.py  fastapi_pagination_custom_list.py  fastapi_pagination_custom_page.py  hashids.py  pwgen.py  redis.py  safe_string.py  santander_web_pay_plus.py  schemas_base.py  universal_mixin.py
pjecz-citas-cliente-api-oauth2/models/: autoridades.py  cit_categorias.py  cit_citas.py  cit_clientes.py  cit_clientes_recuperaciones.py  cit_clientes_registros.py  cit_dias_inhabiles.py  cit_horas_bloqueadas.py  cit_oficinas_servicios.py  cit_servicios.py  distritos.py  domicilios.py  enc_servicios.py  enc_sistemas.py  materias.py  municipios.py  oficinas.py  pag_pagos.py  pag_tramites_servicios.py  permisos.py  ppa_solicitudes.py  tdt_partidos.py  tdt_solicitudes.py
rest-client/: README.md  actualizar-contrasena.rest  agendar-cita.rest  agendar-una-cita.rest  auth-new-account.rest  auth-recover-account.rest  auth.rest  cit_citas.rest  crear-nueva-cuenta.rest  enc_servicios.rest  enc_sistemas.rest  encuestas.rest  hola-mundo.rest  listado-citas.rest  mis-citas.rest  olvide-mi-contraena.rest  pagos.rest
seed/: respuesta_wpp.xml
tests/: ppa_solicitud_test.py  respuesta_banco.html  tdt_solicitud_test.py  wpp.py  wpp_crear_xml_result.py  wpp_crear_xml_send.py  wpp_desencriptar_respuesta.py  wpp_obtener_url.py
(+162 files in other folders)
