[tool.poetry]
name = "pjecz-citas-v2-cliente-api-oauth2"
version = "3.0.0"
description = "API OAuth2 del Sistema de Citas"
authors = ["Guillermo Valdes <guillermo.valdes@pjecz.gob.mx>"]
license = "AGPL3"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.11.2"}
gunicorn = "^20.1.0"
hashids = "^1.3.1"
nest-asyncio = "^1.5.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
pydantic = "^1.10.4"
pytz = "^2022.7.1"
redis = "^4.4.2"
requests = "^2.28.2"
rq = "^1.12.0"
SQLAlchemy = "^1.4.46"
SQLAlchemy-Utils = "^0.39.0"
Unidecode = "^1.3.6"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
pylint = "^2.15.10"
black = "^22.12.0"
pylint-sqlalchemy = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 256
