[tool.poetry]
name = "pjecz-citas-cliente-api-oauth2"
version = "2.2.0"
description = "API OAuth2 del Sistema de Citas"
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"
packages = [{include = "pjecz_citas_cliente_api_oauth2"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.12.22"}
hashids = "^1.3.1"
gunicorn = "^21.2.0"
google-auth = "^2.29.0"
google-cloud = "^0.34.0"
google-cloud-secret-manager = "^2.19.0"
google-cloud-storage = "^2.16.0"
nest-asyncio = "^1.6.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
pytz = "^2024.1"
requests = "^2.31.0"
sqlalchemy = "^2.0.29"
sqlalchemy-utils = "^0.41.2"
redis = "^5.0.3"
rq = "^1.16.1"
unidecode = "^1.3.8"
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
pytest = "^8.1.1"
pylint = "^3.1.0"
pylint-sqlalchemy = "^0.3.0"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
