[tool.poetry]
name = "pjecz-citas-cliente-api-oauth2"
version = "2.0.0"
description = "API del Sistema de Citas con autentificación OAuth2"
authors = ["Guillermo Valdes <guillermo@movimientolibre.com>"]
license = "AGPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.12.34"}
google-auth = "^2.37.0"
google-cloud = "^0.34.0"
google-cloud-secret-manager = "^2.22.1"
google-cloud-storage = "^2.19.0"
gunicorn = "^23.0.0"
hashids = "^1.3.1"
nest-asyncio = "^1.6.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.10"
pydantic = "^2.10.5"
pydantic-settings = "^2.7.1"
python-dotenv = "^1.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.20"
pytz = "^2024.2"
redis = "^5.2.1"
requests = "^2.32.3"
rq = "^2.1.0"
sqlalchemy = "^2.0.37"
sqlalchemy-utils = "^0.41.2"
unidecode = "^1.3.8"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^3.3.3"
pylint-sqlalchemy = "^0.3.0"
pytest = "^8.3.4"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
dependencies = [
    "fastapi",
    "fastapi-pagination",
    "sqlalchemy",
    "sqlalchemy-utils",
    "pydantic",
    "pydantic-settings"
]

[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"
